Adding push docker images in docker hub

--- a/. travis.yml
+++ b/. travis.yml
@@ -14,3 +14,10 @@ script:
   - docker build -t pauloalexandre3d/multi-nginx ./nginx
   - docker build -t pauloalexandre3d/multi-server ./server
   - docker build -t pauloalexandre3d/multi-worker ./worker
+  # Log in to the docker CLI
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  # Take those images and push them to docker hub
+  - docker push pauloalexandre3d/multi-client
+  - docker push pauloalexandre3d/multi-nginx
+  - docker push pauloalexandre3d/multi-server
+  - docker push pauloalexandre3d/multi-worker
