--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,17 @@ after_success:
   - docker push pauloalexandre3d/multi-nginx
   - docker push pauloalexandre3d/multi-server
   - docker push pauloalexandre3d/multi-worker
+
+#Example
+# deploy:
+#   provider: elasticbeanstalk
+#   region: us-west-1
+#   app: multi-docker
+#   env: "multiDocker-env"
+#   bucket_name: "elasticbeanstalk-us-east-2-309026106143"
+#   bucket_path: "multi-docker"
+#   on:
+#     branch: master
+#   access_key_id: $AWS_ACCESS_KEY
+#   secret_access_key:
+#     secure: "$AWS_SECRET_KEY"
