--- a/k8s/database-persistent-volume-claim.yaml
+++ b/k8s/database-persistent-volume-claim.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
-kind: PersistenceVolumeClaim
+kind: PersistentVolumeClaim
 metadata: 
   name: database-persistent-volume-claim
 spec: 
   accessModes: 
     - ReadWriteOnce
   resources: 
-    - requests: 
+    requests:
       storage: 2Gi
