--- a/k8s/posgres-deployment.yaml
+++ b/k8s/posgres-deployment.yaml
@@ -22,7 +22,7 @@ spec:
         resources:
           limits:
             memory: "128Mi"
-            cpu: "500m"
+            # cpu: "500m"
         ports:
         - containerPort: 5432
         volumeMounts:
